macros/entity_macros/tests/ui/derive/ent_wrapper/enum/unsupported-explicit-discriminator-variant.stderr
error: Unsupported shape `unit`
 --> $DIR/unsupported-explicit-discriminator-variant.rs:3:10
  |
3 | #[derive(EntWrapper)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
